# my-first-ai-paper

./: .editorconfig  .gitattributes  .gitignore  README.md  build_latex.py  generate_data_and_doc.py  latex.env  latexmkrc  main.tex  pyproject.toml  references.bib
sections/: conclusion.tex
src/latex/: build_latex.py  latex.env  latexmkrc  main.tex  references.bib
src/latex/sections/: experiments.tex  introduction.tex  method.tex  related_work.tex
src/python/: corpus_crawler.py  generate_plot.py  pyproject.toml  rand_minimal_crawl.py  run.py  simple_crawl.py
